# SAT_Solver-base-on-tableaux

./: .gitignore  CMakeLists.txt  README.md  connectives.cpp  connectives.hpp  main.cpp  tableaux.cpp  tableaux.hpp
